<resources>
    <string name="app_name">SQLiteExample</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="update_contact">Update Contact</string>
    <string name="view_contacts">View Contacts</string>
    <string name="add_contact">Add Contact</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="contact_id">Contact ID</string>
    <string name="add_new_contact">Add New Contact</string>
    <string name="save">Save</string>
</resources>
